// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Empty product grid message 1`] = `
Array [
  <div
    className="MuiGrid-container-2 MuiGrid-spacing-xs-8-24 SkProductGrid-filters-1"
  >
    <div
      className="MuiGrid-item-3"
    >
      <div
        className="MuiInputBase-root-124 MuiInput-root-111 SkSelect-input-103"
        onClick={[Function]}
      >
        <div
          className="MuiSelect-root-104"
        >
          <div
            aria-haspopup="true"
            aria-owns={null}
            aria-pressed="false"
            className="MuiSelect-select-105 MuiSelect-selectMenu-108 SkSelect-selectMenu-101 MuiInputBase-input-134 MuiInput-input-119"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex={0}
          >
            20 Products
          </div>
          <input
            id="page-size"
            name="pageSize"
            type="hidden"
            value={20}
          />
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-141 MuiSelect-icon-110"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      className="MuiGrid-item-3"
    >
      <div
        className="MuiInputBase-root-124 MuiInput-root-111 SkSelect-input-103"
        onClick={[Function]}
      >
        <div
          className="MuiSelect-root-104"
        >
          <div
            aria-haspopup="true"
            aria-owns={null}
            aria-pressed="false"
            className="MuiSelect-select-105 MuiSelect-selectMenu-108 SkSelect-selectMenu-101 MuiInputBase-input-134 MuiInput-input-119"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex={0}
          >
            Newest
          </div>
          <input
            id="sort-by"
            name="sortBy"
            type="hidden"
            value="updatedAt-desc"
          />
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-141 MuiSelect-icon-110"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="inject-ProductGridEmptyMessage-with-routingStore-root-155"
  >
    <p
      className="MuiTypography-root-158 MuiTypography-body1-167 MuiTypography-paragraph-177 inject-ProductGridEmptyMessage-with-routingStore-notFoundMessage-157"
    >
      Sorry! We couldn't find what you're looking for.
    </p>
    <p
      className="MuiTypography-root-158 MuiTypography-body1-167 inject-ProductGridEmptyMessage-with-routingStore-actionMessage-156"
    >
      <a
        className="SkLink-anchor-184"
        href="tag/test-tag"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="link"
        tabIndex={0}
      >
        Clear filters
      </a>
    </p>
  </div>,
]
`;

exports[`basic snapshot 1`] = `
Array [
  <div
    className="MuiGrid-container-2 MuiGrid-spacing-xs-8-24 SkProductGrid-filters-1"
  >
    <div
      className="MuiGrid-item-3"
    >
      <div
        className="MuiInputBase-root-124 MuiInput-root-111 SkSelect-input-103"
        onClick={[Function]}
      >
        <div
          className="MuiSelect-root-104"
        >
          <div
            aria-haspopup="true"
            aria-owns={null}
            aria-pressed="false"
            className="MuiSelect-select-105 MuiSelect-selectMenu-108 SkSelect-selectMenu-101 MuiInputBase-input-134 MuiInput-input-119"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex={0}
          >
            20 Products
          </div>
          <input
            id="page-size"
            name="pageSize"
            type="hidden"
            value={20}
          />
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-141 MuiSelect-icon-110"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      className="MuiGrid-item-3"
    >
      <div
        className="MuiInputBase-root-124 MuiInput-root-111 SkSelect-input-103"
        onClick={[Function]}
      >
        <div
          className="MuiSelect-root-104"
        >
          <div
            aria-haspopup="true"
            aria-owns={null}
            aria-pressed="false"
            className="MuiSelect-select-105 MuiSelect-selectMenu-108 SkSelect-selectMenu-101 MuiInputBase-input-134 MuiInput-input-119"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex={0}
          >
            Newest
          </div>
          <input
            id="sort-by"
            name="sortBy"
            type="hidden"
            value="updatedAt-desc"
          />
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-141 MuiSelect-icon-110"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="MuiGrid-container-2 MuiGrid-spacing-xs-24-26"
  >
    <div
      className="CatalogGrid__GridContainer-iLBjFm jWEVLF"
    >
      <div
        className="CatalogGrid__GridItem-eahVxr hEXmqA"
      >
        <CatalogGridItem
          currencyCode="USD"
          onClick={[Function]}
          placeholderImageURL="/static/images/placeholder.gif"
          product={
            Object {
              "_id": "cmVhY3Rpb24vY2F0YWxvZ1Byb2R1Y3Q6am5hOTVrYTlhTmtNeXRteGg=",
              "description": "Great jacket!",
              "isBackorder": false,
              "isLowQuantity": false,
              "isSoldOut": true,
              "pricing": Array [
                Object {
                  "compareAtPrice": null,
                  "currency": Object {
                    "code": "USD",
                  },
                  "displayPrice": "$12.99 - $19.99",
                  "price": 19.99,
                },
              ],
              "primaryImage": Object {
                "URLs": Object {
                  "large": "/assets/files/Media/aHEWna7yeBvNFM9bL/large/25580_CICN.jpg",
                  "medium": "/assets/files/Media/aHEWna7yeBvNFM9bL/medium/25580_CICN.jpg",
                  "small": "/assets/files/Media/aHEWna7yeBvNFM9bL/small/25580_CICN.png",
                  "thumbnail": "/assets/files/Media/aHEWna7yeBvNFM9bL/thumbnail/25580_CICN.png",
                },
                "priority": 0,
                "productId": "cmVhY3Rpb24vcHJvZHVjdDpqbmE5NWthOWFOa015dG14aA==",
                "toGrid": 1,
              },
              "slug": "men's-lightweigth-synchilla",
              "title": "Men's Lightweigth Synchilla",
              "vendor": "Patagonia",
            }
          }
        />
      </div>
      <div
        className="CatalogGrid__GridItem-eahVxr hEXmqA"
      >
        <CatalogGridItem
          currencyCode="USD"
          onClick={[Function]}
          placeholderImageURL="/static/images/placeholder.gif"
          product={
            Object {
              "_id": "cmVhY3Rpb24vY2F0YWxvZ1Byb2R1Y3Q6QkNUTVo2SFR4RlNwcEpFU2s=",
              "description": "Sign in as administrator to edit.
You can clone this product from the product grid.
You can upload images click or drag in image box on the left here.
Tag this product below, and then add tag in navigation.
Click the bookmark in the tag to set product url.
Option variants, price, quantity, and child variants are created by clicking on the variant below, clone the variant to add more options.
Details can be added below the image for more specific product information.
 Login next to the cart, and then click the dashboard icon for more tools.",
              "isBackorder": false,
              "isLowQuantity": false,
              "isSoldOut": false,
              "pricing": Array [
                Object {
                  "compareAtPrice": null,
                  "currency": Object {
                    "code": "USD",
                  },
                  "displayPrice": "$12.99 - $19.99",
                  "price": 19.99,
                },
              ],
              "primaryImage": Object {
                "URLs": Object {
                  "large": "/assets/files/Media/mmY4m9gwPK2uFEZ8w/large/product_image.jpg",
                  "medium": "/assets/files/Media/mmY4m9gwPK2uFEZ8w/medium/product_image.jpg",
                  "small": "/assets/files/Media/mmY4m9gwPK2uFEZ8w/small/product_image.png",
                  "thumbnail": "/assets/files/Media/mmY4m9gwPK2uFEZ8w/thumbnail/product_image.png",
                },
                "priority": 0,
                "productId": "cmVhY3Rpb24vcHJvZHVjdDpCQ1RNWjZIVHhGU3BwSkVTaw==",
                "toGrid": 1,
              },
              "slug": "example-product",
              "title": "Basic Reaction Product",
              "vendor": "Reaction Commerce",
            }
          }
        />
      </div>
    </div>
  </div>,
  <div
    className="MuiGrid-container-2 MuiGrid-justify-xs-space-between-21 SkPageStepper-root-154"
  >
    <div
      className="MuiGrid-item-3"
    >
      <div
        className="Button__ButtonDiv-bnfrK eplvXk"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
      >
        <div>
          Previous
        </div>
        <div
          className="Button__SpinnerWrap-bgOcuM cCKgPo"
          style={
            Object {
              "opacity": 0,
              "paddingLeft": 0,
              "width": 0,
            }
          }
        />
      </div>
    </div>
    <div
      className="MuiGrid-item-3"
    />
  </div>,
]
`;
